Fixed alignment of the column headings

--- a/css/FrontEndGridField.css
+++ b/css/FrontEndGridField.css
@@ -76,7 +76,7 @@ form table.ss-gridfield-table tr.ss-gridfield-even.ss-gridfield-last { border-bo
 form table.ss-gridfield-table tr.ss-gridfield-even:hover { background: #FFFAD6; }
 form table.ss-gridfield-table tr.even { background: #F0F4F7; }
 form table.ss-gridfield-table tr.even:hover { background: #FFFAD6; }
-form table.ss-gridfield-table tr th { font-weight: bold; font-size: 12px; color: #FFF; padding: 5px; border-right: 1px solid rgba(0, 0, 0, 0.1); }
+form table.ss-gridfield-table tr th { font-weight: bold; font-size: 12px; color: #FFF; padding: 5px; border-right: 1px solid rgba(0, 0, 0, 0.1); text-align: left; }
 form table.ss-gridfield-table tr th div.fieldgroup, form table.ss-gridfield-table tr th div.fieldgroup-field { width: 100%; position: relative; }
 form table.ss-gridfield-table tr th div.fieldgroup { min-width: 200px; padding-right: 0; }
 form table.ss-gridfield-table tr th div.fieldgroup.filter-buttons { min-width: 49px; box-shadow: none; border: none; }
